--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,46 @@ body {
     padding: 0;
     background-color: #e1e1e1;
 }
+
+input {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    padding: 0.3rem 0.5rem;
+    font-family: inherit;
+    font-size: 0.8rem;
+    color: #333;
+    outline: none;
+}
+
+input:focus {
+    border-color: dodgerblue;
+}
+
+.new-quote {
+    width: 35%;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.btn {
+    border: 0;
+    padding: 0.5rem 1rem;
+    border-radius: 15px;
+    color: white;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+.add-qouteBtn {
+    background-color: #44ab44;
+}
+
+.show-quoteBtn {
+    background-color: gold;
+    color: black;
+}
