--- a/dom-manipulation/styles.css
+++ b/dom-manipulation/styles.css
@@ -25,7 +25,6 @@ input:focus {
 
 .new-quote {
     width: 35%;
-    margin: 20px 0;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -36,6 +35,10 @@ input:focus {
     padding: 0.4rem 1rem;
     border-radius: 15px;
     color: white;
+}
+
+.deleteBtn {
+    background-color: red;
 }
 
 .btn:hover {
