--- a/dom-manipulation/styles.css
+++ b/dom-manipulation/styles.css
@@ -24,7 +24,7 @@ input:focus {
 }
 
 .new-quote {
-    width: 35%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -76,4 +76,18 @@ input:focus {
 .category {
     background-color: gold;
     padding: 0.3em 0.5rem
+}
+
+#categoryFilter {
+    padding: 6px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    width: 200px;
+}
+
+#categoryFilter option {
+    background-color: #f0f0f0;
+    color: #333;
+    padding: 10px;
 }
